# clawnest

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/desktopMain/kotlin/com/openclaw/app/: Main.kt
android/app/src/desktopMain/kotlin/com/openclaw/app/ui/: DesktopApp.kt
android/app/src/jvmShared/kotlin/com/openclaw/app/ui/: Strings.kt  Theme.kt
android/app/src/main/java/com/openclaw/app/: MainActivity.kt  SshLink.kt
android/app/src/main/java/com/openclaw/app/ui/: AppNav.kt  AppViewModel.kt  ChatScreen.kt  Strings.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
backend/: pyproject.toml
backend/openclaw_agent/: __init__.py  agent.py  audit.py  config.py  executor.py  models.py  openclaw-notify  personas.py  server.py
backend/openclaw_agent/personas/: programmer.json  universal.json
backend/personas/: sysadmin.json
