[project]
name = "openclaw-agent"
version = "0.1.0"
description = "Self-hosted Claude daemon for a user's VPS (OpenClaw)"
requires-python = ">=3.10"
# anthropic must be recent enough for adaptive thinking + output_config + cache_control.
dependencies = [
    "anthropic>=0.50",
    "websockets>=12",
]

[project.scripts]
openclaw-agent = "openclaw_agent.server:run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openclaw_agent"]
